[gd_scene load_steps=3 format=3 uid="uid://crvdyx505524f"]

[ext_resource type="Script" path="res://scripts/test_opportunities.gd" id="1_jv1mv"]
[ext_resource type="PackedScene" uid="uid://sisgt16yb0p8" path="res://scenes/opportunities_board.tscn" id="1_my4er"]

[node name="TestOpportunities" type="Node"]
script = ExtResource("1_jv1mv")

[node name="Opportunities" parent="." instance=ExtResource("1_my4er")]
unique_name_in_owner = true
offset_left = 104.0
offset_top = 165.0
offset_right = 261.0
offset_bottom = 587.0
scale = Vector2(0.460362, 0.460362)

[node name="Opportunities2" parent="." instance=ExtResource("1_my4er")]
unique_name_in_owner = true
offset_left = 231.0
offset_top = 162.0
offset_right = 388.0
offset_bottom = 584.0
scale = Vector2(0.460362, 0.460362)

[node name="Opportunities3" parent="." instance=ExtResource("1_my4er")]
unique_name_in_owner = true
offset_left = 105.0
offset_top = 416.0
offset_right = 262.0
offset_bottom = 838.0
scale = Vector2(0.460362, 0.460362)

[node name="Opportunities4" parent="." instance=ExtResource("1_my4er")]
unique_name_in_owner = true
offset_left = 234.0
offset_top = 416.0
offset_right = 391.0
offset_bottom = 838.0
scale = Vector2(0.460362, 0.460362)

[node name="toggle once" type="Button" parent="."]
unique_name_in_owner = true
offset_left = 157.0
offset_top = 80.0
offset_right = 264.0
offset_bottom = 111.0
text = "Trigger Once"

[node name="toggle timer" type="Button" parent="."]
unique_name_in_owner = true
offset_left = 749.0
offset_top = 77.0
offset_right = 856.0
offset_bottom = 108.0
text = "Timer"

[node name="Opportunities5" parent="." instance=ExtResource("1_my4er")]
unique_name_in_owner = true
offset_left = 685.0
offset_top = 159.0
offset_right = 842.0
offset_bottom = 581.0
scale = Vector2(0.460362, 0.460362)

[node name="Opportunities6" parent="." instance=ExtResource("1_my4er")]
unique_name_in_owner = true
offset_left = 830.0
offset_top = 156.0
offset_right = 987.0
offset_bottom = 578.0
scale = Vector2(0.460362, 0.460362)

[node name="Opportunities7" parent="." instance=ExtResource("1_my4er")]
unique_name_in_owner = true
offset_left = 674.0
offset_top = 408.0
offset_right = 831.0
offset_bottom = 830.0
scale = Vector2(0.460362, 0.460362)

[node name="Opportunities8" parent="." instance=ExtResource("1_my4er")]
unique_name_in_owner = true
offset_left = 830.0
offset_top = 403.0
offset_right = 987.0
offset_bottom = 825.0
scale = Vector2(0.460362, 0.460362)
